# get_data_to_geo_portal

./: .gitignore  DOCUMENTATION.md  README.md  clean_extracted_files.py  database.py  example_layer_versions.txt  file_scanner.py  gdb_handler.py  huge_dirs.txt  huge_files.txt  install_packages.bat  logger_setup.py  main.py  pyproject.toml  skip_the_extract.txt  אפיון משימת גליטת קבצים .docx  שלב 1.docx
